  Hezekiah M. Carty and Simon Cruanes, initial report by Gerd Stolpmann)

- Add missing functions to ArrayLabels, BytesLabels, ListLabels,
  MoreLabels, StringLabels so they are compatible with non-labeled
  counterparts.
  (Roma Sokolov)

- GPR#999: Arg, do not repeat thrice usage_msg when reporting an error
  (Florian Angeletti, review by Gabriel Scherer)

### Debugging and profiling:

- GPR#378: Add [Printexc.raise_with_backtrace] raise an exception using
  an explicit backtrace
  (François Bobot, review by Gabriel Scherer, Xavier Leroy, Damien Doligez,
   Frédéric Bour)

### Manual and documentation:

- PR#6597, GPR#1030: add forward references to language extensions
  that extend non-terminal symbols in the language reference section.
  (Florian Angeletti, review by Gabriel Scherer)

- GPR#939: activate the caml_example environment in the language
  extensions section of the manual. Convert some existing code
  examples to this format.
  (Florian Angeletti)

- add a HACKING.adoc file to contain various tips and tricks for
  people hacking on the repository. See also CONTRIBUTING.md for
  advice on sending contributions upstream.
  (Gabriel Scherer and Gabriel Radanne, review by David Allsopp,
  inspired by John Whitington)

### Other libraries:

- GPR#650: in the Unix library, add `?cloexec:bool` optional arguments to
  functions that create file descriptors (`dup`, `dup2`, `pipe`, `socket`,
  `socketpair`, `accept`).  Implement these optional arguments in the
  most atomic manner provided by the operating system to set (or clear)
  the close-on-exec flag at the same time the file descriptor is created,
  reducing the risk of race conditions with `exec` or `create_process`
  calls running in other threads, and improving security.  Also: add a
  `O_KEEPEXEC` flag for `openfile` by symmetry with `O_CLOEXEC`.
  (Xavier Leroy)

- PR#7158: Event.sync, Mutex.create, Condition.create cause too many GCs.